# minigtkthemeswitch

./: CMakeLists.txt  README.md
demo/: main.cpp
demo/themes/: test.xss
xm/: anim.hpp  core.hpp  input.hpp  renderer.hpp  widgets.hpp  window.hpp
